fix: css layout problem

--- a/src/components/body/about/About.css
+++ b/src/components/body/about/About.css
@@ -29,14 +29,24 @@
 }
 
 @media only screen and (max-width: 720px) {
+  .about {
+    height: 600px;
+  }
   .about-top {
     flex-direction: column;
     justify-content: center;
     align-items: center;
   }
+  .about-photo {
+    width: 300px;
+    height: 300px;
+  }
   .about-info {
-  font-size: 50px;
-}
+    font-size: 40px;
+    width: 300px;
+    display: flex;
+    justify-content: center;
+  }
   .picture {
     height: 280px;
   }
